Add link to demo site.

--- a/README
+++ b/README
@@ -1,10 +1,10 @@
-Mini voting tool for workshops where ideas have to be ranked anonymously by a group.
+Mini PHP web-voting tool for workshops where ideas have to be ranked anonymously by a group.
 
-Every member of the group gets an url to invest a million into a mix of the ideas.
+- Vote: Every member of the group gets an url to invest a million into a mix of the ideas.
+- Display: Show the investments and the development on a big screen with the display page.
+- Config: To create, freeze, reset a voting use config.php.
 
 Plain PHP. No database needed: Investments / Votes are stored in a json file. The PHP files must be able to write in the votings directory.
-
-To create a new voting call config.php.
 
 Watch a demo here: http://votes.cgast.de
 
